Updated 2.3 and 2.4 solutions

--- a/part 2/2.3/docker-compose.yml
+++ b/part 2/2.3/docker-compose.yml
@@ -2,17 +2,13 @@ version: '3.8'
 
 services: 
   frontend:
-    build: 
-      context: .
-      dockerfile: /home/eeritvan/DevOps/part 1/1.14/frontend.Dockerfile
+    image: frontend
     container_name: frontend
     ports:
       - 5000:5000
 
   backend:
-    build:
-      context: .
-      dockerfile: /home/eeritvan/DevOps/part 1/1.14/backend.Dockerfile
+    image: backend
     container_name: backend
     ports:
       - 8080:8080
