--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -13,18 +13,16 @@ jobs:
     steps:
       - uses: actions/checkout@v4
 
-      # Login
       - name: Login to Docker Hub
         uses: docker/login-action@v3
         with:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
           
-      # Build
       - name: Build and push
         uses: docker/build-push-action@v5
         with:
           context: .
           file: part 3/3.1/express-app/Dockerfile
           push: true
-          tags: eeritvan/devops-express:latest
+          tags: ${{ secrets.DOCKERHUB_USERNAME }}/devops-express:latest
